test/Interop/Cxx/templates/function-template-objc-typechecker.code
// RUN: not %target-language-frontend -typecheck %s -I %S/Inputs -enable-experimental-cxx-interop 2>&1 | %FileCheck %s

// REQUIRES: objc_interop

import FunctionTemplates
import ObjectiveC

// Verify that ObjCBool type is banned from C++ template parameters.

takesValue(ObjCBool(true))
// CHECK: error: could not generate C++ types from the generic Codira types provided; the following Codira type(s) provided to 'takesValue' could not be converted: ObjCBool
constLvalueReference(ObjCBool(true))
// CHECK: error: could not generate C++ types from the generic Codira types provided; the following Codira type(s) provided to 'constLvalueReference' could not be converted: ObjCBool
